# deribit_robot

./: Dockerfile  README.rst  api.py  config.yaml  database.py  docker-compose.yaml  pyproject.toml  robot.py  settings.yaml  urls.py
tests/: test_deribit_api.py
