[tool.poetry]
name = "Deribit_robot"
version = "0.1.0"
description = ""
authors = ["Stas <stasefremovx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
PyYAML = "^5.4.1"
flake8 = "^3.9.2"
isort = "^5.9.2"
python-dotenv = "^0.18.0"
python-environ = "^0.4.54"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
